--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <script>
         async function populate() {
-            const requestURL = 'https://raw.githubusercontent.com/joshuawalker/lis2-tracker/main/choices.json';
+            const requestURL = 'https://joshuawalke.github.io/lis2-tracker/choices.json';
             const request = new Request(requestURL);
 
             const response = await fetch(request);
